--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "start": "zmp start",
     "deploy": "zmp deploy",
-    "build:css": "postcss src/css/tailwind.css -o src/css/styles.css"
+    "build:css": "postcss src/css/tailwind.css -o src/css/styles.css",
+    "dev": "vite"
   },
   "dependencies": {
     "@react-spring/web": "^9.6.1",
@@ -30,7 +31,7 @@
     "react-router-dom": "^6.8.2",
     "recoil": "^0.7.7",
     "swiper": "^9.1.0",
-    "zmp-sdk": "^2.39.9",
+    "zmp-sdk": "^2.9.4",
     "zmp-ui": "^1.11.5"
   },
   "devDependencies": {
@@ -42,7 +43,7 @@
     "postcss": "^8.4.21",
     "postcss-aspect-ratio-polyfill": "^2.0.0",
     "postcss-cli": "^8.3.1",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "^10.3.1",
     "sass": "^1.58.3",
     "tailwindcss": "^3.4.10",
     "vite": "^2.9.18",
